[package]

name = "union-find"
version = "0.4.0"
edition = "2021"
rust-version = "1.56.1"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/union-find-rs"
description = "Struct and methods for union-find operation."
documentation = "https://gifnksm.github.io/union-find-rs"
exclude = ["etc/*"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.3.6"
