[package]

name = "union-find"
version = "0.4.1"
edition = "2021"
rust-version = "1.57.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/union-find-rs"
description = "Struct and methods for union-find operation."
documentation = "https://gifnksm.github.io/union-find-rs"
exclude = ["etc/*"]

[badges]
maintenance = { status = "passively-maintained" }

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "union-find = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" }
]
